--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,102 +6,119 @@
     android:layout_height="match_parent"
     tools:context="com.example.raluca.storebooksystem.LoginActivity">
 
-    <TextView
-        android:id="@+id/textView25"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
-        android:fontFamily="cursive"
-        android:text="Login"
-        android:textAlignment="center"
-        android:textSize="36sp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="34dp" />
-
     <EditText
         android:id="@+id/editTextUsername"
-        android:layout_width="241dp"
+        android:layout_width="250dp"
         android:layout_height="45dp"
+        android:layout_alignEnd="@+id/checkBoxRememberMe"
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="17dp"
+        android:drawableLeft="@drawable/ic_account_circle"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
+        android:textSize="18sp"
         tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="115dp"
-        android:layout_marginTop="32dp"
-        android:layout_below="@+id/textView25"
-        android:layout_alignEnd="@+id/checkBoxRememberMe" />
+        tools:layout_editor_absoluteY="115dp" />
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="241dp"
+        android:layout_width="250dp"
         android:layout_height="44dp"
+        android:layout_alignLeft="@+id/editTextUsername"
+        android:layout_alignStart="@+id/editTextUsername"
+        android:layout_below="@+id/editTextUsername"
+        android:layout_marginTop="18dp"
+        android:drawableLeft="@drawable/ic_lock_password"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textSize="18sp"
         tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="180dp"
-        android:layout_below="@+id/editTextUsername"
-        android:layout_alignLeft="@+id/editTextUsername"
-        android:layout_alignStart="@+id/editTextUsername"
-        android:layout_marginTop="18dp" />
-
-    <Button
-        android:id="@+id/buttonSignIn"
-
-        android:layout_width="204dp"
-        android:layout_height="53dp"
-        android:layout_below="@+id/checkBoxRememberMe"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:text="Sign In"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="311dp" />
+        tools:layout_editor_absoluteY="180dp" />
 
     <TextView
         android:id="@+id/textView26"
-        android:layout_width="151dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Not A Registered User?"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
+        android:text="Not A Registered User?  "
         tools:layout_editor_absoluteX="90dp"
         tools:layout_editor_absoluteY="378dp"
-        android:layout_below="@+id/buttonSignIn"
-        android:layout_alignStart="@+id/buttonSignIn"
-        android:layout_marginTop="12dp" />
+        android:layout_below="@+id/cardViewLogin"
+        android:layout_alignStart="@+id/checkBoxRememberMe" />
 
     <CheckBox
         android:id="@+id/checkBoxRememberMe"
-        android:layout_width="243dp"
+        android:layout_width="250dp"
         android:layout_height="39dp"
-        android:text="Remember me"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="245dp"
         android:layout_below="@+id/editTextPassword"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp" />
+        android:layout_marginTop="14dp"
+        android:text="Remember me"
+        tools:layout_editor_absoluteX="72dp"
+        tools:layout_editor_absoluteY="245dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="49dp"
+        android:layout_marginBottom="18dp"
         tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="425dp" />
+        tools:layout_editor_absoluteY="425dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/textViewSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView26"
-        android:layout_alignBottom="@+id/textView26"
-        android:layout_alignEnd="@+id/buttonSignIn"
         android:clickable="true"
         android:onClick="serve"
         android:text="SignUp"
-        android:textColor="@android:color/holo_green_dark" />
+        android:textColor="@android:color/holo_green_dark"
+        android:layout_alignBaseline="@+id/textView26"
+        android:layout_alignBottom="@+id/textView26"
+        android:layout_toEndOf="@+id/textView26" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/logo_login"
+        android:layout_marginEnd="13dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/textViewSignUp"
+        android:layout_marginTop="17dp" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardViewLogin"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/checkBoxRememberMe"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="10dp">
+
+        <RelativeLayout
+            android:id="@+id/buttonSignIn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="LOGIN"
+                android:textColor="@android:color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
