--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,7 +23,7 @@
 
     <EditText
         android:id="@+id/editTextLastName"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editTextFirstName"
         android:layout_below="@+id/editTextFirstName"
@@ -31,11 +31,12 @@
         android:ems="10"
         android:fontFamily="serif"
         android:hint="Last Name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textSize="16dp" />
 
     <EditText
         android:id="@+id/editTextFirstName"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editTextUsername"
         android:layout_below="@+id/editTextUsername"
@@ -43,11 +44,12 @@
         android:ems="10"
         android:fontFamily="serif"
         android:hint="First Name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textSize="16dp" />
 
     <EditText
         android:id="@+id/editTextUsername"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
@@ -55,11 +57,12 @@
         android:ems="10"
         android:fontFamily="serif"
         android:hint="Username"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textSize="16dp" />
 
     <EditText
         android:id="@+id/editTextRetypePassword"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editTextPassword"
         android:layout_below="@+id/editTextPassword"
@@ -67,11 +70,12 @@
         android:ems="10"
         android:fontFamily="serif"
         android:hint="Retype Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textSize="16dp" />
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/editTextLastName"
         android:layout_below="@+id/editTextLastName"
@@ -79,16 +83,36 @@
         android:ems="10"
         android:fontFamily="serif"
         android:hint="Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textSize="16dp" />
 
-    <Button
-        android:id="@+id/buttonSubmit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/editTextRetypePassword"
-        android:layout_alignStart="@+id/editTextRetypePassword"
+    <android.support.v7.widget.CardView
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="23dp"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="10dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        android:id="@+id/cardViewSubmit"
         android:layout_below="@+id/editTextRetypePassword"
-        android:layout_marginTop="37dp"
-        android:text="Submit" />
+        android:layout_centerHorizontal="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/cardViewSubmit"
+                android:layout_centerHorizontal="true"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="12dp"
+                android:text="SUBMIT"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
