--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
         android:id="@+id/profile_id"
-        android:icon="@drawable/ic_account_circle_white_24dp"
+        android:icon="@drawable/ic_account_circle_black_24dp"
+        android:title="Profile"
+        app:showAsAction="always"></item>
+    <item
+        android:id="@+id/home_id"
+        android:icon="@drawable/ic_home_black_24dp"
         android:title="Profile"
         app:showAsAction="always"></item>
 
     <item
-        android:id="@+id/shopping_id"
-        android:icon="@drawable/ic_shopping_cart_white_24dp"
-        android:title="Shopping"
-        app:showAsAction="always"></item>
-    <item
-        android:id="@+id/logOut_id"
-        android:icon="@drawable/ic_exit_to_app_white_24dp"
+        android:id="@+id/LogOut_id"
+        android:icon="@drawable/ic_exit_to_app_black_24dp"
         android:title="Log Out"
         app:showAsAction="always"></item>
-
 
 </menu>
