Versiunea de dupa ce am pus pozele pe recyclerView din baza de date

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,9 +11,15 @@
         <item name="android:navigationBarColor">@android:color/background_dark</item>
         <item name="android:textColorPrimary">@android:color/background_dark</item>
         <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+
     </style>
 
     <style name="theme" parent="AppTheme" />
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
