--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,11 @@
     <color name="lightgray">#ededed</color>
     <color name="dark_light">#808B96</color>
     <color name="fantasy_color">#D7CCC8</color>
+    <!--<color name="colorPrimary">#F50057</color>-->
+    <!--<color name="colorPrimaryDark">#F50057</color>-->
+    <!--<color name="colorAccent">#FF4081</color>-->
+    <color name="viewBg">#f1f5f8</color>
+    <color name="album_title">#4c4c4c</color>
 
 
 </resources>
