Versiunea in care toate cartile apar in functie de categorii

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="colorAccent2">#dd3870</color>
     <color name="blue">#589bdf</color>
     <color name="greenLight">#C5E1A5</color>
+    <color name="A200">#B2FF59</color>
+    <color name="A400">#00E676</color>
     <color name="deeppurple">#7c4dff</color>
     <color name="green">#00bfa5</color>
     <color name="lightgray">#ededed</color>
