--- a/app/src/main/res/layout/activity_book_activity.xml
+++ b/app/src/main/res/layout/activity_book_activity.xml
@@ -1,28 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.raluca.storebooksystem.BookActivity">
 
+    <LinearLayout
+        android:layout_width="382dp"
+        android:layout_height="50dp"
+        android:id="@+id/linearLayout">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="139dp"
-        android:layout_height="131dp"
-        app:srcCompat="@drawable/allegiant"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="44dp" />
+        <android.support.v7.widget.CardView
+            android:layout_width="382dp"
+            android:layout_height="50dp"
+            app:cardBackgroundColor="@color/greenLight"/>
 
-    <EditText
-        android:id="@+id/editTextBook"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="168dp"
-        tools:layout_editor_absoluteY="64dp" />
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentEnd="true">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="382dp"
+            android:layout_height="150dp"
+            app:cardBackgroundColor="@color/bruno">
+
+            <TextView
+                android:id="@+id/textViewTitle"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="160dp"
+                android:layout_marginTop="20dp"
+                android:text="Title"
+                android:textAlignment="viewStart"
+                android:textColor="@color/white"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textViewAuthor"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="160dp"
+                android:layout_marginTop="50dp"
+                android:text="Author"
+                android:textAlignment="viewStart"
+                android:textColor="@color/white"
+                android:textSize="14dp" />
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="80dp"
+                android:layout_marginLeft="255dp"
+                android:text="DOWNLOAD"
+                android:textSize="12dp"
+                android:textColor="@color/black"
+                android:background="@drawable/button_style"/>
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="151dp"
+                android:layout_height="131dp"
+                android:layout_marginTop="10dp" />
+
+
+        </android.support.v7.widget.CardView>
+
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="202dp">
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:cardBackgroundColor="@color/bruno"></android.support.v7.widget.CardView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="240dp">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="357dp"
+            app:cardBackgroundColor="@color/greenLight">
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+
+
+</RelativeLayout>
