--- a/app/src/main/res/layout/activity_book_activity.xml
+++ b/app/src/main/res/layout/activity_book_activity.xml
@@ -46,15 +46,16 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="160dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="60dp"
                 android:text="Author"
                 android:textAlignment="viewStart"
                 android:textColor="@color/white"
                 android:textSize="14dp" />
             <Button
+                android:id="@+id/buttonOrange"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="90dp"
                 android:layout_marginLeft="255dp"
                 android:text="DOWNLOAD"
                 android:textSize="12dp"
@@ -78,7 +79,39 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            app:cardBackgroundColor="@color/bruno"></android.support.v7.widget.CardView>
+            app:cardBackgroundColor="@color/bruno">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/star1"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
+                <ImageView
+                    android:id="@+id/star2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
+                <ImageView
+                    android:id="@+id/star3"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
+                <ImageView
+                    android:id="@+id/star4"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
+                <ImageView
+                    android:id="@+id/star5"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 
     <LinearLayout
