--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,8 +15,11 @@
     <color name="dark_light">#808B96</color>
     <color name="fantasy_color">#D7CCC8</color>
     <color name="bruno">#827717</color>
+    <color name="brunoLight">#8D6E63</color>
+    <color name="brown">#795548</color>
     <color name="black">#000000</color>
     <color name="orange">#FFD740</color>
+    <color name="orangeLight">#FFE082</color>
     <!--<color name="colorPrimary">#F50057</color>-->
     <!--<color name="colorPrimaryDark">#F50057</color>-->
     <!--<color name="colorAccent">#FF4081</color>-->
