--- a/app/src/main/res/layout/customlayout.xml
+++ b/app/src/main/res/layout/customlayout.xml
@@ -32,17 +32,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:paddingLeft="20dp"
-        android:paddingTop="40dp"
+        android:layout_height="20dp"
         android:layout_below="@+id/textReviewTextView"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:paddingLeft="20dp">
 
         <ImageView
             android:id="@+id/starRev1"
             android:layout_width="20dp"
-            android:layout_height="20dp" />
+            android:layout_height="20dp"/>
 
         <ImageView
             android:id="@+id/starRev2"
