Interfata pentru adaugarea review-ului

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="fantasy_color">#D7CCC8</color>
     <color name="bruno">#827717</color>
     <color name="brunoLight">#8D6E63</color>
+    <color name="brunoLight2">#9E9D24</color>
     <color name="brown">#795548</color>
     <color name="black">#000000</color>
     <color name="orange">#FFD740</color>
