--- a/app/src/main/res/layout/activity_book_activity.xml
+++ b/app/src/main/res/layout/activity_book_activity.xml
@@ -9,7 +9,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,17 +56,6 @@
                         android:textColor="@color/white"
                         android:textSize="14dp" />
 
-                    <Button
-                        android:id="@+id/buttonOrange"
-                        android:layout_width="100dp"
-                        android:layout_height="40dp"
-                        android:layout_marginLeft="255dp"
-                        android:layout_marginTop="90dp"
-                        android:background="@drawable/button_style"
-                        android:text="DOWNLOAD"
-                        android:textColor="@color/black"
-                        android:textSize="12dp" />
-
                     <ImageView
                         android:id="@+id/imageView"
                         android:layout_width="151dp"
@@ -83,6 +73,27 @@
                         android:textColor="@color/white"
                         android:textSize="18dp" />
 
+                    <Button
+                        android:id="@+id/buttonAddReview"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="152dp"
+                        android:layout_marginTop="90dp"
+                        android:background="@drawable/button_style"
+                        android:text="Add review"
+                        android:textSize="12dp" />
+
+                    <Button
+                        android:id="@+id/buttonOrange"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="257dp"
+                        android:layout_marginTop="90dp"
+                        android:background="@drawable/button_style"
+                        android:text="DOWNLOAD"
+                        android:textColor="@color/black"
+                        android:textSize="12dp" />
+
 
                 </android.support.v7.widget.CardView>
 
@@ -95,7 +106,7 @@
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="match_parent"
                     app:cardBackgroundColor="@color/bruno">
 
                     <LinearLayout
@@ -126,6 +137,8 @@
                             android:id="@+id/star5"
                             android:layout_width="30dp"
                             android:layout_height="30dp" />
+
+
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
