--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -6,15 +6,26 @@
     android:layout_height="match_parent"
     tools:context="com.example.raluca.storebooksystem.DescriptionActivity">
 
-    <TextView
-        android:id="@+id/descriptionText"
-        android:layout_width="352dp"
-        android:layout_height="478dp"
-        android:text="TextView"
-        android:textSize="14dp"
-        android:textColor="@color/black"
-        android:textAlignment="viewStart"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="15dp"
-        android:padding="30dp"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/descriptionText"
+                android:layout_width="352dp"
+                android:layout_height="wrap_content"
+                android:padding="30dp"
+                android:text="TextView"
+                android:textAlignment="viewStart"
+                android:textColor="@color/black"
+                android:textSize="14dp"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="15dp" />
+
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
