--- a/app/src/main/res/layout/activity_favorite_books.xml
+++ b/app/src/main/res/layout/activity_favorite_books.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.raluca.storebooksystem.OrdersActivity">
+    tools:context="com.example.raluca.storebooksystem.FavoriteBooksActivity">
+
+    <ListView
+        android:id="@+id/listViewFavoriteBooks"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"></ListView>
 
 </android.support.constraint.ConstraintLayout>
