--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,7 @@
         tools:layout_editor_absoluteY="0dp">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cardMyOrders"
+            android:id="@+id/cardMyFavoriteBooks"
             android:layout_width="160dp"
             android:layout_height="150dp"
             android:layout_margin="10dp"
@@ -39,13 +39,13 @@
                     android:layout_height="64dp"
                     android:background="@drawable/cerclebackgroundpurple"
                     android:padding="10dp"
-                    android:src="@drawable/ic_library_books_black_24dp" />
+                    android:src="@drawable/favorite" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="My Orders"
+                    android:text="My Favorite Books"
                     android:textStyle="bold" />
 
                 <View
@@ -59,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Check my orders"
+                    android:text="Check my preferences"
                     android:textColor="@color/dark_light" />
 
 
