--- a/app/src/main/res/layout/template_for_favorite_books.xml
+++ b/app/src/main/res/layout/template_for_favorite_books.xml
@@ -39,7 +39,7 @@
         android:textStyle="bold" />
     <TextView
         android:id="@+id/categoryText"
-        android:layout_width="180dp"
+        android:layout_width="135dp"
         android:layout_height="30dp"
         android:text="categorie"
         android:textColor="@color/green"
@@ -47,5 +47,14 @@
         android:layout_toEndOf="@+id/imageViewFavoriteBook"
         android:layout_marginStart="13dp"
         android:layout_marginTop="100dp" />
+
+    <ImageView
+        android:id="@+id/trashImageView"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@drawable/trash"
+        android:layout_alignBottom="@+id/imageViewFavoriteBook"
+        android:layout_toEndOf="@+id/categoryText" />
+
 
 </RelativeLayout>
