Ininierea partii in care afisez cartile din categoria in care userul a avut cel mai mare interes

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.raluca.storebooksystem.LoginActivity">
+    tools:context="com.example.raluca.storebooksystem.LoginActivity"
+    tools:weightSum="8"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/editTextUsername"
@@ -19,7 +22,8 @@
         android:inputType="textPersonName"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="115dp" />
+        tools:layout_editor_absoluteY="115dp"
+        android:layout_weight="1" />
 
     <EditText
         android:id="@+id/editTextPassword"
@@ -35,7 +39,8 @@
         android:inputType="textPassword"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="180dp" />
+        tools:layout_editor_absoluteY="180dp"
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/textView26"
@@ -47,7 +52,8 @@
         tools:layout_editor_absoluteX="90dp"
         tools:layout_editor_absoluteY="378dp"
         android:layout_below="@+id/cardViewLogin"
-        android:layout_alignStart="@+id/checkBoxRememberMe" />
+        android:layout_alignStart="@+id/checkBoxRememberMe"
+        android:layout_weight="1" />
 
     <CheckBox
         android:id="@+id/checkBoxRememberMe"
@@ -58,7 +64,8 @@
         android:layout_marginTop="14dp"
         android:text="Remember me"
         tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="245dp" />
+        tools:layout_editor_absoluteY="245dp"
+        android:layout_weight="1" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -69,7 +76,8 @@
         tools:layout_editor_absoluteX="166dp"
         tools:layout_editor_absoluteY="425dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/textViewSignUp"
@@ -81,7 +89,8 @@
         android:textColor="@android:color/holo_green_dark"
         android:layout_alignBaseline="@+id/textView26"
         android:layout_alignBottom="@+id/textView26"
-        android:layout_toEndOf="@+id/textView26" />
+        android:layout_toEndOf="@+id/textView26"
+        android:layout_weight="1" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -91,7 +100,8 @@
         android:layout_marginEnd="13dp"
         android:layout_alignParentTop="true"
         android:layout_alignEnd="@+id/textViewSignUp"
-        android:layout_marginTop="17dp" />
+        android:layout_marginTop="17dp"
+        android:layout_weight="1"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewLogin"
@@ -117,7 +127,8 @@
                 android:text="LOGIN"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_weight="1"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
