Inca nu e terminat ceea ce am vrut, e doar save inainte de reinstalare windows

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="black">#000000</color>
     <color name="orange">#FFD740</color>
     <color name="orangeLight">#FFE082</color>
+    <color name="yellow">#ffb300</color>
     <!--<color name="colorPrimary">#F50057</color>-->
     <!--<color name="colorPrimaryDark">#F50057</color>-->
     <!--<color name="colorAccent">#FF4081</color>-->
