--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,7 +51,7 @@
                             android:layout_height="64dp"
                             android:background="@drawable/cerclebackgroundpurple"
                             android:padding="10dp"
-                            android:src="@drawable/favorite" />
+                            android:src="@drawable/ic_favorite_black_24dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -121,24 +121,27 @@
 
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="163dp"
+                android:layout_width="368dp"
+                android:layout_height="153dp"
                 android:clipToPadding="false"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="0dp"
+                tools:weightSum="2">
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/cardCategory"
-                    android:layout_width="340dp"
-                    android:layout_height="132dp"
+                    android:layout_width="160dp"
+                    android:layout_height="150dp"
                     android:layout_margin="10dp"
                     android:clickable="true"
                     android:foreground="?android:attr/selectableItemBackground">
 
                     <LinearLayout
-
+                        android:id="@+id/card"
                         android:layout_width="match_parent"
-                        android:layout_height="130dp"
+                        android:layout_height="match_parent"
                         android:background="@color/lightgray"
                         android:gravity="center"
                         android:orientation="vertical">
@@ -147,7 +150,6 @@
                             android:id="@+id/imageView3"
                             android:layout_width="64dp"
                             android:layout_height="64dp"
-
                             android:background="@drawable/cerclebackgroundgreen"
                             android:padding="10dp"
                             android:src="@drawable/ic_stars_blaaack_24dp" />
@@ -172,8 +174,51 @@
                 </android.support.v7.widget.CardView>
 
 
-            </LinearLayout>
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cardCartBookStatistics"
+                    android:layout_width="160dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="10dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground">
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/lightgray"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+
+                        <ImageView
+                            android:id="@+id/imageView4"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:background="@drawable/cercleorange"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_show_chart_black_24dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:text="Book statistics"
+                            android:textStyle="bold" />
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:padding="5dp"
+                            android:text="The most read books of the month"
+                            android:textColor="@color/dark_light" />
+
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
@@ -182,6 +227,7 @@
                     android:id="@+id/textViewDescriptionInterested"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
                     android:text="Because you are interested in"
                     android:textAlignment="center"
                     android:textColor="@color/black"
@@ -191,7 +237,7 @@
                     android:id="@+id/text3"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="40dp"
                     android:text=""
                     android:textAlignment="center"
                     android:textColor="@color/black"
@@ -199,6 +245,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:paddingTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
